--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.manson.fo76</groupId>
     <artifactId>domain</artifactId>
-    <version>1.5-SNAPSHOT</version>
+    <version>1.5</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -78,6 +77,6 @@
         <connection>scm:git:ssh://git@github.com/sdaskaliesku/fo76Domain.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/sdaskaliesku/fo76Domain.git
         </developerConnection>
-        <tag>HEAD</tag>
+        <tag>domain-1.5</tag>
     </scm>
 </project>
