--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,3 +26,5 @@ jobs:
             git config user.name "GitHub Actions"
     - name: Build with Maven
       run: mvn -B clean release:clean release:prepare release:perform --file pom.xml
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
