--- a/.github/workflows/maven_release.yml
+++ b/.github/workflows/maven_release.yml
@@ -9,20 +9,16 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[ci skip]')"
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Configure Git User
-        run: |
-            git config user.email "actions@github.com"
-            git config user.name "GitHub Actions"
       - name: Release
+        uses: qcastel/github-actions-maven-release@master
         env:
-          GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          token: ${{ secrets.GH_TOKEN }}
-        run: mvn -B --settings settings.xml --file pom.xml clean release:clean release:prepare release:perform --file pom.xml
+          JAVA_HOME: /usr/lib/jvm/java-1.8-openjdk/
+        with:
+          git-release-bot-name: "Github actions"
+          git-release-bot-email: "actions@github.com"
+          maven-args: "-Dmaven.javadoc.skip=true -DskipTests -DskipITs -Dmaven.deploy.skip=true"
+          access-token: ${{ secrets.GH_TOKEN }}
+          gpg-enabled: false
