--- a/.github/workflows/maven_release.yml
+++ b/.github/workflows/maven_release.yml
@@ -12,19 +12,20 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Maven Release and Publish
+        # You may pin to the exact commit or the version.
+        # uses: mg-smartrent/github-actions-maven-release@5f387c0d77b22da293e9812d43ab90cdc49f475a
+        uses: mg-smartrent/github-actions-maven-release@v1.5
         with:
-          java-version: 14
-          server-id: github
-      - name: Configure Git User
-        run: |
-          git config user.email "actions@github.com"
-          git config user.name "GitHub Actions"
-      - name: Release
-        env:
-          GITHUB_USERNAME: ${{ secrets.GH_USERNAME }}
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
-          token: ${{ secrets.GH_TOKEN }}
-        run: mvn -B --settings settings.xml --file pom.xml release:prepare release:perform
+          # Maven server repository id to push the artefacts to
+          maven-repo-server-id: "github"
+          # Maven server repository username
+          maven-repo-server-username: ${{ secrets.GH_USERNAME }}
+          # Maven server repository password
+          maven-repo-server-password: ${{ secrets.GH_TOKEN }}
+          # The git user name for commiting the release
+          git-release-bot-name: "Github actions"
+          # The git user email for commiting the release
+          git-release-bot-email: "actions@github.com"
+          # Github access token. https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line
+          access-token: ${{ secrets.GH_TOKEN }}
