--- a/.github/workflows/maven_release.yml
+++ b/.github/workflows/maven_release.yml
@@ -12,20 +12,26 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
 
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+          server-id: github
+      - name: Configure Git User
+        run: |
+          git config user.email "actions@github.com"
+          git config user.name "GitHub Actions"
       - name: Maven Release and Publish
-        # You may pin to the exact commit or the version.
-        # uses: mg-smartrent/github-actions-maven-release@5f387c0d77b22da293e9812d43ab90cdc49f475a
         uses: mg-smartrent/github-actions-maven-release@v1.5
         with:
-          # Maven server repository id to push the artefacts to
-          maven-repo-server-id: "github"
-          # Maven server repository username
+          release-branch-name: master
+          maven-repo-server-id: github
           maven-repo-server-username: ${{ secrets.GH_USERNAME }}
-          # Maven server repository password
           maven-repo-server-password: ${{ secrets.GH_TOKEN }}
-          # The git user name for commiting the release
-          git-release-bot-name: "Github actions"
-          # The git user email for commiting the release
+          git-release-bot-name: ${{ secrets.GH_USERNAME }}
           git-release-bot-email: "actions@github.com"
           # Github access token. https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line
           access-token: ${{ secrets.GH_TOKEN }}
+          maven-release-publish: "true"
+          maven-snapshot-publish: "false"
