--- a/.github/workflows/maven_release.yml
+++ b/.github/workflows/maven_release.yml
@@ -23,9 +23,9 @@ jobs:
           git config user.email "actions@github.com"
           git config user.name "GitHub Actions"
       - name: Maven Release and Publish
-        uses: mg-smartrent/github-actions-maven-release@v1.5
+        uses: qcastel/github-actions-maven-release@master
         with:
-          release-branch-name: master
+          version-minor: true
           maven-repo-server-id: github
           maven-repo-server-username: ${{ secrets.GH_USERNAME }}
           maven-repo-server-password: ${{ secrets.GH_TOKEN }}
@@ -33,5 +33,7 @@ jobs:
           git-release-bot-email: "actions@github.com"
           # Github access token. https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line
           access-token: ${{ secrets.GH_TOKEN }}
-          maven-release-publish: "true"
+          token: ${{ secrets.GH_TOKEN }}
+          maven-release-publish: true
+          gpg-enabled: false
           maven-snapshot-publish: "false"
